src/components/about/about.module.scss
.hover {
    transition: var(--transition-micro-medium);

    &:hover {
        transform: translateX(var(--static-space-4));
    }
}

.avatar {
    position: sticky;
    height: fit-content;
    top: var(--static-space-64);
}


@media (--s) {
    .avatar {
        top: auto;
    }

    .textAlign {
        text-align: center;
    }

    .blockAlign {
        align-self: center;
    }
}

